hphp/hack/test/typecheck/tuple_rvalue_only.php.exp
ERROR: File "tuple_rvalue_only.php", line 5, characters 3-15:
Cannot use unstable feature: `shape_and_tuple_destructuring` (Parsing[1002])
